# light-simulation

./: .editorconfig  .gitignore  Cargo.toml  TODO.md  flake.nix  gen-wasm-glue.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.web.json  tsconfig.worker.json  vite.config.ts  wrangler.jsonc
frontend/: index.html
frontend/css/: components.css  elements.css  index.css  layout.css  reset.css  theme.css
frontend/src/: index.ts  render.ts  worker.ts
frontend/src/models/: color.ts  ipc.ts  object.ts  render.ts
frontend/src/ui/: controller.ts  elements.ts  model.ts
frontend/src/ui/controllers/: objects.ts  render.ts
frontend/src/ui/helpers/: color.ts  dom.ts
frontend/src/ui/services/: render.ts  scene.ts
frontend/src/worker/: index.ts
src/: config.rs  lib.rs  main.rs  tests.rs  util.rs  wasm.rs
src/raytrace/: camera.rs  config.rs  image.rs  material.rs  mod.rs  object.rs  ray.rs  render.rs  scene.rs  shape.rs  sphere.rs  tests.rs  transform.rs
src/tests/: mod.rs
