[package]
name = "light-simulation"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
nalgebra = "0.32.4"
rand = "0.9.2"
rand_distr = "0.5.1"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
