[package]
name = "light-simulation"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
nalgebra = "0.34.1"
rand = "0.9.2"
rand_distr = "0.5.1"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
